<resources>
    <string name="sip_settings">SIP settings</string>
    <string name="sip_accounts">SIP accounts</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_receive_calls">Receive incoming calls</string>
    <string name="sip_receive_calls_summary">Uses more battery life</string>
    <string name="sip_call_options_title">Use SIP calling</string>
    <string name="sip_call_options_wifi_only_title">Use SIP calling (Wi-Fi only)</string>
    <string name="sip_call_options_entry_1">For all calls when data network is available</string>
    <string name="sip_call_options_entry_2">Only for SIP calls</string>
    <string name="sip_call_options_wifi_only_entry_1">For all calls</string>
    <string name="add_sip_account">Add account</string>
    <string name="remove_sip_account">Remove account</string>
    <string name="sip_account_list">SIP accounts</string>
    <string name="saving_account">Saving the account…</string>
    <string name="removing_account">Removing the account…</string>
    <string name="sip_menu_save">Save</string>
    <string name="sip_menu_discard">Discard</string>
    <string name="alert_dialog_close">Close the profile</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="close_profile">Close</string>
    <string name="registration_status_checking_status">Checking status...</string>
    <string name="registration_status_registering">Registering…</string>
    <string name="registration_status_still_trying">Still trying…</string>
    <string name="registration_status_not_receiving">Not receiving calls.</string>
    <string name="registration_status_no_data">Account registration stopped because there is no Internet connection.</string>
    <string name="registration_status_no_wifi_data">Account registration stopped because there is no Wi-Fi connection.</string>
    <string name="registration_status_not_running">Account registration unsuccessful.</string>
    <string name="registration_status_done">Receiving calls.</string>
    <string name="registration_status_failed_try_later">Account registration unsuccessful: (%s); will try later</string>
    <string name="registration_status_invalid_credentials">Account registration unsuccessful: Incorrect username or password.</string>
    <string name="registration_status_server_unreachable">Account registration unsuccessful: Check the server name.</string>
    <string name="third_party_account_summary">This account is currently in use by the %s app.</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="sip_edit_new_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="auth_username_title">Authentication username</string>
    <string name="auth_username_summary">Username used for authentication</string>
    <string name="default_preference_summary">&lt;Not set></string>
    <string name="display_name_summary">&lt;Same as username></string>
    <string name="optional_summary">&lt;Optional></string>
    <string name="default_port">5060</string>
    <string name="default_transport">UDP</string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="advanced_settings_hide">▽ Touch to hide all</string>
    <string name="empty_alert">"%s is required and can't be left blank."</string>
    <string name="not_a_valid_port">Port number should be within 1000 and 65534.</string>
    <string name="no_internet_available">To place a SIP call, check your Internet connection first.</string>
    <string name="no_wifi_available">You need to be connected to a Wi-Fi network for SIP calls (use the Wireless &amp; Network settings).</string>
    <string name="no_voip">SIP calling not supported</string>
    <string name="sip_system_decide">Automatic</string>
    <string name="sip_always_send_keepalive">Always send</string>
    <string name="sip_always">SIP_ALWAYS</string>
    <string name="sip_address_only">SIP_ADDRESS_ONLY</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="display_name">DisplayName</string>
    <string name="proxy_address">ProxyAddress</string>
    <string name="port">Port</string>
    <string name="transport">Protocol</string>
    <string name="send_keepalive">SendKeepAlive</string>
    <string name="advanced_settings_container">advanced settings container</string>
    <string name="auth_username">AuthUserName</string>
    <string name="sip_connection_service_label">Built-in SIP calling</string>
    <string name="dialpad_0_labels" />
    <string name="dialpad_1_labels" />
    <string name="dialpad_2_labels" />
    <string name="dialpad_3_labels" />
    <string name="dialpad_4_labels" />
    <string name="dialpad_5_labels" />
    <string name="dialpad_6_labels" />
    <string name="dialpad_7_labels" />
    <string name="dialpad_8_labels" />
    <string name="dialpad_9_labels" />
    <string name="dialpad_star_labels" />
    <string name="dialpad_pound_labels" />
    <string name="callFailed_non_selected_user_clearing" />
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="default_notification_description">Default sound (%1$s)</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Out‑of‑network call</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Cellular network not available</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_cb_enabled">"Can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_dsac_restricted">Calls restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="callFailed_no_circuit_avail" />
    <string name="callFailed_network_out_of_order" />
    <string name="callFailed_no_route_to_destination" />
    <string name="callFailed_channel_unacceptable" />
    <string name="callFailed_operator_determined_barring" />
    <string name="callFailed_normal" />
    <string name="ims_settings">IMS Settings</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="phone_accounts">Calling accounts</string>
    <string name="wifi_calling">Wi-Fi calling</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCW">Call waiting</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="labelCFB">When busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="labelCFNRy">When unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="labelCFNRc">When unreachable</string>
    <string name="labelCFNRc_cdma">Forward Implicitly</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="enable">Turn on</string>
    <string name="disable">Turn off</string>
    <string name="call_barring">Call barring</string>
    <string name="call_barring_outgoing">Outgoing call barring</string>
    <string name="call_barring_incoming">Incoming call barring</string>
    <string name="input_password">Input password</string>
    <string name="labelCbCancelAll">Cancel all callbarring</string>
    <string name="psw_enter_old">Old password</string>
    <string name="labelCbChangePassword">Change password</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="voice_privacy">Voice privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="enable_video_calling_title">Turn on video calling</string>
    <string name="wifi_calling_settings_key">button_wifi_calling_settings_key</string>
    <string name="call_forward_all">Forward all incoming calls</string>
    <string name="call_forward_custom">Custom</string>
    <string name="all_outgoing">Bar all outgoing calls</string>
    <string name="outgoing_international">Bar outgoing international calls</string>
    <string name="outgoing_international_roaming">Bar outgoing international roaming calls</string>
    <string name="all_incoming">Bar all incoming calls</string>
    <string name="incoming_calls_when_roaming">Bar incoming calls during roaming</string>
    <string name="cancel_all_bar">Cancel all call barring restrictions</string>
    <string name="update_bar_pwd_title">Edit call barring password</string>
    <string name="CFActivate">Activate</string>
    <string name="CFDeactivate">Deactivate</string>
    <string name="labelCFDeactAll">Deactivate All</string>
</resources>