<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:title="@string/phone_accounts" android:key="phone_account_settings_preference_screen">
        <intent android:targetPackage="com.android.phone" android:targetClass="com.android.phone.settings.PhoneAccountSettingsActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/voicemail" android:key="button_voicemail_category_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" />
    <PreferenceScreen android:title="@string/wifi_calling" android:key="@string/wifi_calling_settings_key">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$WifiCallingSettingsActivity" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="true" android:title="@string/enable_video_calling_title" android:key="button_enable_video_calling" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry_key" android:summary="@string/auto_retry_mode_summary" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelGSMMore" android:key="button_gsm_more_expand_key" android:summary="@string/sum_gsm_call_settings" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelCDMAMore" android:key="button_cdma_more_expand_key" android:summary="@string/sum_cdma_call_settings" />
    <PreferenceScreen android:persistent="false" android:title="@string/ims_settings" android:key="ims_settings_key">
        <intent android:targetPackage="com.qualcomm.qti.ims" android:action="android.intent.action.MAIN" android:targetClass="com.qualcomm.qti.ims.ImsSettings" />
    </PreferenceScreen>
</PreferenceScreen>