<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_forwarding_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <SwitchPreference android:persistent="false" android:title="@string/labelCF" android:key="cdma_call_forward_toggle" />
    <PreferenceCategory android:key="call_forward_category_1" />
    <CheckBoxPreference android:persistent="false" android:title="@string/call_forward_all" android:key="cdma_call_forward_all" />
    <CheckBoxPreference android:persistent="false" android:title="@string/call_forward_custom" android:key="cdma_call_forward_custom" />
    <PreferenceCategory android:key="call_forward_category_2" />
    <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFU" android:key="button_cdma_cfu_key" android:dialogTitle="@string/labelCFU" phone:confirmMode="activation" />
    <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFB" android:key="button_cdma_cfb_key" android:dialogTitle="@string/labelCFB" phone:confirmMode="activation" />
    <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFNRy" android:key="button_cdma_cfnry_key" android:dialogTitle="@string/labelCFNRy" phone:confirmMode="activation" />
    <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/labelCFNRc" android:key="button_cdma_cfnrc_key" android:dialogTitle="@string/labelCFNRc" phone:confirmMode="activation" />
    <Preference android:title="@string/labelCFNRc" android:key="button_cdma_ccf_key" android:summary="@string/labelCFNRc" />
</PreferenceScreen>