<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <ListPreference android:persistent="false" android:entries="@array/call_barring_outgoing_display_values" android:title="@string/call_barring_outgoing" android:key="call_barring_outgoing_key" android:defaultValue="DEFAULT" android:dialogTitle="@string/call_barring_outgoing" android:entryValues="@array/call_barring_outgoing_values" />
    <ListPreference android:persistent="false" android:entries="@array/call_barring_incoming_display_values" android:title="@string/call_barring_incoming" android:key="call_barring_incoming_key" android:defaultValue="DEFAULT" android:dialogTitle="@string/call_barring_incoming" android:entryValues="@array/call_barring_incoming_values" />
    <com.android.phone.settings.fdn.EditPinPreference android:persistent="false" android:title="@string/labelCbCancelAll" android:key="call_barring_cancel_all_key" android:dialogMessage="@string/input_password" />
    <com.android.phone.settings.fdn.EditPinPreference android:persistent="false" android:title="@string/labelCbChangePassword" android:key="call_barring_change_psw_key" android:dialogMessage="@string/psw_enter_old" />
</PreferenceScreen>