<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_forwarding_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:persistent="false" android:title="@string/labelCFU" android:key="button_cfu_setting_key">
        <com.android.phone.CdmaCallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/CFActivate" android:key="button_cfu_key" android:dialogTitle="@string/labelCFU" android:dialogMessage="@string/messageCFU" phone:reason="unconditional" />
        <PreferenceScreen android:title="@string/CFDeactivate" android:key="button_cfu_deact_key">
            <intent android:targetPackage="com.android.server.telecom" android:action="android.intent.action.CALL_PRIVILEGED" android:targetClass="com.android.server.telecom.components.UserCallActivity" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCFB" android:key="button_cfb_setting_key">
        <com.android.phone.CdmaCallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/CFActivate" android:key="button_cfb_key" android:dialogTitle="@string/labelCFB" android:dialogMessage="@string/messageCFB" phone:reason="busy" />
        <PreferenceScreen android:title="@string/CFDeactivate" android:key="button_cfb_deact_key">
            <intent android:targetPackage="com.android.server.telecom" android:action="android.intent.action.CALL_PRIVILEGED" android:targetClass="com.android.server.telecom.components.UserCallActivity" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCFNRy" android:key="button_cfnry_setting_key">
        <com.android.phone.CdmaCallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/CFActivate" android:key="button_cfnry_key" android:dialogTitle="@string/labelCFNRy" android:dialogMessage="@string/messageCFNRy" phone:reason="no_reply" />
        <PreferenceScreen android:title="@string/CFDeactivate" android:key="button_cfnry_deact_key">
            <intent android:targetPackage="com.android.server.telecom" android:action="android.intent.action.CALL_PRIVILEGED" android:targetClass="com.android.server.telecom.components.UserCallActivity" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCFNRc_cdma" android:key="button_cfnrc_setting_key">
        <com.android.phone.CdmaCallForwardEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/CFActivate" android:key="button_cfnrc_key" android:dialogTitle="@string/labelCFNRc_cdma" android:dialogMessage="@string/messageCFNRc" phone:reason="not_reachable" />
        <PreferenceScreen android:title="@string/CFDeactivate" android:key="button_cfnrc_deact_key">
            <intent android:targetPackage="com.android.server.telecom" android:action="android.intent.action.CALL_PRIVILEGED" android:targetClass="com.android.server.telecom.components.UserCallActivity" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/labelCFDeactAll" android:key="button_cf_deact_all_key">
        <intent android:targetPackage="com.android.server.telecom" android:action="android.intent.action.CALL_PRIVILEGED" android:targetClass="com.android.server.telecom.components.UserCallActivity" />
    </PreferenceScreen>
</PreferenceScreen>